--- a/.github/workflows/unit-tests.yml
+++ b/.github/workflows/unit-tests.yml
@@ -53,7 +53,7 @@ jobs:
         run: |
           pytest src/test/api/python \
             --cov=src/api/python \
-            --cov-report=term \
+            --cov-report=term-missing \
             --cov-report=html \
             --cov-report=xml \
             --cov-fail-under=${{ env.COVERAGE_THRESHOLD }} \
