refactor: update import statements and adjust pythonpath for consistency

--- a/pytest.ini
+++ b/pytest.ini
@@ -3,5 +3,5 @@ markers =
     unittest: Unit Tests (relatively fast)
     functional: Functional Tests (tests that require a running server, with stubbed downstreams)
     azure: marks tests as extended (run less frequently, relatively slow)
-pythonpath = ./src/api
+pythonpath = ./src/api/python
 log_level=debug
