enabled cosmos chat history

--- a/src/api/python/.env.sample
+++ b/src/api/python/.env.sample
@@ -7,10 +7,10 @@ APPLICATIONINSIGHTS_CONNECTION_STRING=
 AZURE_AI_AGENT_API_VERSION=
 AZURE_AI_AGENT_ENDPOINT=
 AZURE_AI_AGENT_MODEL_DEPLOYMENT_NAME=
-# AZURE_COSMOSDB_ACCOUNT=""
-# AZURE_COSMOSDB_CONVERSATIONS_CONTAINER=""
-# AZURE_COSMOSDB_DATABASE=""
-# AZURE_COSMOSDB_ENABLE_FEEDBACK=""
+AZURE_COSMOSDB_ACCOUNT=""
+AZURE_COSMOSDB_CONVERSATIONS_CONTAINER=""
+AZURE_COSMOSDB_DATABASE=""
+AZURE_COSMOSDB_ENABLE_FEEDBACK=""
 AZURE_OPENAI_API_VERSION=
 AZURE_OPENAI_DEPLOYMENT_MODEL=
 AZURE_OPENAI_ENDPOINT=
