--- a/src/api/python/.env.sample
+++ b/src/api/python/.env.sample
@@ -19,6 +19,11 @@ DISPLAY_CHART_DEFAULT="False"
 FABRIC_SQL_CONNECTION_STRING=""
 FABRIC_SQL_DATABASE=
 FABRIC_SQL_SERVER=
+IS_WORKSHOP="False"
 REACT_APP_LAYOUT_CONFIG="{\n  \"appConfig\": {\n      \"CHAT_CHATHISTORY\": {\n        \"CHAT\": 70,\n        \"CHATHISTORY\": 30\n      }\n    }\n  }\n}"
+SQLDB_CONNECTION_STRING=""
+SQLDB_DATABASE=
+SQLDB_SERVER=
+SQLDB_USER_MID=
 USE_AI_PROJECT_CLIENT="False"
 USE_CHAT_HISTORY_ENABLED="True"
