--- a/scripts/requirements.txt
+++ b/scripts/requirements.txt
@@ -26,6 +26,9 @@ pypdf==5.6.0
 # Azure AI Search
 azure-search-documents==11.6.0
 
+# Azure SQL Management
+azure-mgmt.-web==7.3.1
+
 # OpenAI SDK (for embeddings)
 openai==2.8.1
 
