--- a/scripts/requirements.txt
+++ b/scripts/requirements.txt
@@ -27,7 +27,7 @@ pypdf==5.6.0
 azure-search-documents==11.6.0
 
 # Azure SQL Management
-azure-mgmt.-web==7.3.1
+azure-mgmt-web==7.3.1
 
 # OpenAI SDK (for embeddings)
 openai==2.8.1
