update workshop docs

--- a/workshop/mkdocs.yml
+++ b/workshop/mkdocs.yml
@@ -57,6 +57,7 @@ extra:
       link: https://github.com/microsoft/agentic-applications-for-unified-data-foundation-solution-accelerator
 
 nav:
+  - "🚀 Quick Deploy": deployment-guide.md
   - Overview: index.md
   - Get Started:
     - Prerequisites: 00-get-started/index.md
