--- a/azure.yaml
+++ b/azure.yaml
@@ -16,10 +16,13 @@ hooks:
   postprovision:
     windows:
       run: |
-        Write-Host "Web app URL: "
-        Write-Host "$env:WEB_APP_URL" -ForegroundColor Cyan
-
         $isWorkshop = $env:IS_WORKSHOP
+        $deployApp = $env:AZURE_ENV_DEPLOY_APP
+
+        if (-not ($isWorkshop -eq "true" -and $deployApp -ne "true")) {
+            Write-Host "Web app URL: "
+            Write-Host "$env:WEB_APP_URL" -ForegroundColor Cyan
+        }
         if ($isWorkshop -eq "true") {
             Write-Host "`n=== Run each command one at a time, waiting for completion before proceeding ===" -ForegroundColor Yellow
             Write-Host "`n1. Setup Python environment:"
@@ -28,7 +31,12 @@ hooks:
             Write-Host "   pip install uv && uv pip install -r scripts/requirements.txt" -ForegroundColor Cyan
 
             Write-Host "`n2. Build solution (data processing and agent creation):"
-            Write-Host "   python scripts/00_build_solution.py --from 02" -ForegroundColor Cyan
+            $azureEnvOnly = $env:AZURE_ENV_ONLY
+            if ($azureEnvOnly -eq "true") {
+                Write-Host "   python scripts/00_build_solution.py --from 04" -ForegroundColor Cyan
+            } else {
+                Write-Host "   python scripts/00_build_solution.py --from 02" -ForegroundColor Cyan
+            }
 
             Write-Host "`nFor full instructions, see: https://microsoft.github.io/agentic-applications-for-unified-data-foundation-solution-accelerator/01-deploy/03-configure/" -ForegroundColor Gray
         } else {
@@ -45,9 +53,11 @@ hooks:
       interactive: true
     posix:
       run: |
-        echo "Web app URL: "
-        echo $WEB_APP_URL
-        echo ""
+        if [ "$IS_WORKSHOP" != "true" ] || [ "$AZURE_ENV_DEPLOY_APP" = "true" ]; then
+            echo "Web app URL: "
+            echo $WEB_APP_URL
+            echo ""
+        fi
 
         if [ "$IS_WORKSHOP" = "true" ]; then
             echo ""
@@ -60,7 +70,11 @@ hooks:
 
             echo ""
             echo "2. Build solution (data processing and agent creation):"
-            echo "   python scripts/00_build_solution.py --from 02"
+            if [ "$AZURE_ENV_ONLY" = "true" ]; then
+                echo "   python scripts/00_build_solution.py --from 04"
+            else
+                echo "   python scripts/00_build_solution.py --from 02"
+            fi
 
             echo ""
             echo "For full instructions, see: https://microsoft.github.io/agentic-applications-for-unified-data-foundation-solution-accelerator/01-deploy/03-configure/"
