Refactor: Remove deprecated scripts and update workshop deployment setup
- Deleted 02_upload_documents.py and its requirements as they are no longer needed.
- Removed run_search_index_scripts.sh and related SQL item scripts to streamline the deployment process.
- Updated run_workshop_data_setup.sh to reflect changes in environment variable handling and removed unnecessary parameters.
- Cleaned up create_sql_items.py by removing unused imports and functions.
- Updated documentation to clarify workshop mode setup and deployment instructions.
- Added IS_WORKSHOP and AZURE_ENV_DEPLOY_APP flags to .env.sample for better configuration management.

--- a/src/api/python/.env.sample
+++ b/src/api/python/.env.sample
@@ -22,3 +22,6 @@ FABRIC_SQL_SERVER=
 REACT_APP_LAYOUT_CONFIG="{\n  \"appConfig\": {\n      \"CHAT_CHATHISTORY\": {\n        \"CHAT\": 70,\n        \"CHATHISTORY\": 30\n      }\n    }\n  }\n}"
 USE_AI_PROJECT_CLIENT="False"
 USE_CHAT_HISTORY_ENABLED="True"
+IS_WORKSHOP="False"
+AZURE_ENV_DEPLOY_APP="False"
+AZURE_ENV_ONLY="False"
