--- a/scripts/requirements.txt
+++ b/scripts/requirements.txt
@@ -23,8 +23,8 @@ fpdf2==2.8.5
 # PDF reading (for AI Search upload)
 pypdf==5.6.0
 
-# Azure AI Search
-azure-search-documents==11.6.0
+# Azure AI Search (preview - required for Foundry IQ knowledge base support)
+azure-search-documents==11.7.0b2
 
 # Azure SQL Management
 azure-mgmt-web==7.3.1
