--- a/.github/workflows/job-deploy.yml
+++ b/.github/workflows/job-deploy.yml
@@ -352,6 +352,107 @@ jobs:
         shell: bash
         run: exit 1
       
+      - name: Check Azure Search Service Quota
+        id: search-quota-check
+        shell: bash
+        env:
+          INPUT_AZURE_LOCATION: ${{ inputs.azure_location }}
+          TRIGGER_TYPE: ${{ inputs.trigger_type }}
+        run: |
+          SEARCH_TIER="basic"
+          SEARCH_TIER_DISPLAY="Basic"
+
+          # Valid deployment regions (must match Bicep @allowed list)
+          ALL_VALID_REGIONS=("australiaeast" "centralus" "eastasia" "eastus" "japaneast" "northeurope" "southeastasia" "swedencentral" "uksouth" "westus" "westus3")
+
+          # Build ordered list of regions to check:
+          # - Manual triggers: user's region first, then remaining valid regions
+          # - Automatic triggers: all valid regions (no user preference)
+          REGIONS_TO_CHECK=()
+          if [[ "$TRIGGER_TYPE" == "workflow_dispatch" && -n "$INPUT_AZURE_LOCATION" ]]; then
+            echo "📋 Manual trigger: checking user-selected region '$INPUT_AZURE_LOCATION' first"
+            REGIONS_TO_CHECK+=("$INPUT_AZURE_LOCATION")
+            for r in "${ALL_VALID_REGIONS[@]}"; do
+              if [[ "$r" != "$INPUT_AZURE_LOCATION" ]]; then
+                REGIONS_TO_CHECK+=("$r")
+              fi
+            done
+          else
+            echo "📋 Automatic trigger: checking all valid regions for search quota"
+            REGIONS_TO_CHECK=("${ALL_VALID_REGIONS[@]}")
+          fi
+
+          echo "🔍 Checking Azure Search $SEARCH_TIER_DISPLAY tier quota across regions: ${REGIONS_TO_CHECK[*]}"
+          echo ""
+
+          SEARCH_VALID_REGION=""
+          CHECKED_REGIONS=()
+          for REGION in "${REGIONS_TO_CHECK[@]}"; do
+            echo "----------------------------------------"
+            echo "🔍 Checking region: $REGION"
+
+            SEARCH_USAGE=$(az rest --method get \
+              --url "https://management.azure.com/subscriptions/${{ secrets.AZURE_SUBSCRIPTION_ID }}/providers/Microsoft.Search/locations/${REGION}/usages?api-version=2024-03-01-preview" \
+              -o json 2>/dev/null || echo '{"value":[]}')
+
+            if [ "$(echo "$SEARCH_USAGE" | jq '.value | length')" -eq 0 ]; then
+              echo "   ⚠️ Could not retrieve Azure Search quota for $REGION. Skipping."
+              CHECKED_REGIONS+=("$REGION: skipped")
+              continue
+            fi
+
+            TIER_USAGE=$(echo "$SEARCH_USAGE" | jq -r --arg tier "$SEARCH_TIER" '.value[] | select(.name.value == $tier) | .currentValue // 0')
+            TIER_LIMIT=$(echo "$SEARCH_USAGE" | jq -r --arg tier "$SEARCH_TIER" '.value[] | select(.name.value == $tier) | .limit // 0')
+            TIER_AVAILABLE=$((TIER_LIMIT - TIER_USAGE))
+
+            echo "   $SEARCH_TIER_DISPLAY Tier: Used=$TIER_USAGE | Limit=$TIER_LIMIT | Available=$TIER_AVAILABLE"
+
+            if [ "$TIER_AVAILABLE" -ge 1 ]; then
+              echo "   ✅ Region '$REGION' has sufficient Azure Search $SEARCH_TIER_DISPLAY quota!"
+              SEARCH_VALID_REGION="$REGION"
+              CHECKED_REGIONS+=("$REGION: ✅ available=$TIER_AVAILABLE")
+              break
+            else
+              echo "   ❌ Insufficient quota in $REGION"
+              CHECKED_REGIONS+=("$REGION: ❌ available=$TIER_AVAILABLE")
+            fi
+          done
+
+          echo ""
+          echo "========================================"
+          if [ -z "$SEARCH_VALID_REGION" ]; then
+            echo "❌ No region with sufficient Azure Search $SEARCH_TIER_DISPLAY tier quota found!"
+            echo ""
+            echo "Regions checked:"
+            for entry in "${CHECKED_REGIONS[@]}"; do
+              echo "  - $entry"
+            done
+
+            # Add error to GitHub Summary
+            echo "## ❌ Azure Search Quota Check Failed" >> $GITHUB_STEP_SUMMARY
+            echo "" >> $GITHUB_STEP_SUMMARY
+            echo "No region with sufficient Azure Search **$SEARCH_TIER_DISPLAY** tier quota was found." >> $GITHUB_STEP_SUMMARY
+            echo "" >> $GITHUB_STEP_SUMMARY
+            echo "| Region | Status |" >> $GITHUB_STEP_SUMMARY
+            echo "|--------|--------|" >> $GITHUB_STEP_SUMMARY
+            for entry in "${CHECKED_REGIONS[@]}"; do
+              IFS=': ' read -r region status <<< "$entry"
+              echo "| \`$region\` | $status |" >> $GITHUB_STEP_SUMMARY
+            done
+            exit 1
+          fi
+
+          echo "✅ Selected region with Azure Search quota: $SEARCH_VALID_REGION"
+          echo "SEARCH_VALID_REGION=$SEARCH_VALID_REGION" >> $GITHUB_ENV
+          echo "SEARCH_VALID_REGION=$SEARCH_VALID_REGION" >> $GITHUB_OUTPUT
+          echo "SEARCH_QUOTA_CHECK=passed" >> $GITHUB_OUTPUT
+
+          if [[ "$TRIGGER_TYPE" == "workflow_dispatch" && "$SEARCH_VALID_REGION" != "$INPUT_AZURE_LOCATION" ]]; then
+            echo ""
+            echo "⚠️ User-selected region '$INPUT_AZURE_LOCATION' had insufficient search quota."
+            echo "   Falling back to region: $SEARCH_VALID_REGION"
+          fi
+      
       - name: Set Deployment Region
         id: set_region
         shell: bash
