--- a/.github/workflows/job-deploy-linux.yml
+++ b/.github/workflows/job-deploy-linux.yml
@@ -328,6 +328,13 @@ jobs:
           API_PID=$(azd env get-value API_PID)
           echo "API_PID=${API_PID}" >> $GITHUB_ENV
           echo "API_PID=${API_PID}" >> $GITHUB_OUTPUT
+
+      - name: Re-authenticate with Azure (refresh OIDC token)
+        uses: azure/login@v2
+        with:
+          client-id: ${{ secrets.AZURE_CLIENT_ID }}
+          tenant-id: ${{ secrets.AZURE_TENANT_ID }}
+          subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
           
       - name: Run Post-Deployment Scripts
         env:
@@ -340,7 +347,6 @@ jobs:
           bash infra/scripts/fabric_scripts/run_fabric_items_scripts.sh \
             "${{ secrets.FABRIC_WORKSPACE_ID }}"
             
-
       - name: Generate Deploy Job Summary
         if: always()
         env:
