--- a/.github/workflows/job-deploy-windows.yml
+++ b/.github/workflows/job-deploy-windows.yml
@@ -331,6 +331,13 @@ jobs:
           $API_PID = azd env get-value API_PID
           "API_PID=$API_PID" | Out-File -FilePath $env:GITHUB_ENV -Encoding utf8 -Append  
           "API_PID=$API_PID" | Out-File -FilePath $env:GITHUB_OUTPUT -Encoding utf8 -Append
+      
+      - name: Re-authenticate with Azure (refresh OIDC token)
+        uses: azure/login@v2
+        with:
+          client-id: ${{ secrets.AZURE_CLIENT_ID }}
+          tenant-id: ${{ secrets.AZURE_TENANT_ID }}
+          subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
 
       - name: Run Post-Deployment Scripts
         env:
