--- a/.github/workflows/job-deploy-windows.yml
+++ b/.github/workflows/job-deploy-windows.yml
@@ -277,6 +277,7 @@ jobs:
           azd env set AZURE_ENV_IMAGETAG="$env:IMAGE_TAG"
           azd env set BACKEND_RUNTIME_STACK="$env:BACKEND_RUNTIME_STACK"
           azd env set AZURE_ENV_USE_CASE="$env:AZURE_ENV_USE_CASE"
+          azd env set DEPLOYING_USER_PRINCIPAL_TYPE="ServicePrincipal"
           
           # Set ACR name only when building Docker image
           if ($env:BUILD_DOCKER_IMAGE -eq "true") {
