Add IS_WORKSHOP environment variable to deployment workflows

--- a/.github/workflows/job-deploy-windows.yml
+++ b/.github/workflows/job-deploy-windows.yml
@@ -278,6 +278,7 @@ jobs:
           azd env set BACKEND_RUNTIME_STACK="$env:BACKEND_RUNTIME_STACK"
           azd env set AZURE_ENV_USE_CASE="$env:AZURE_ENV_USE_CASE"
           azd env set DEPLOYING_USER_PRINCIPAL_TYPE="ServicePrincipal"
+          azd env set IS_WORKSHOP false
           
           # Set ACR name only when building Docker image
           if ($env:BUILD_DOCKER_IMAGE -eq "true") {
