--- a/.github/workflows/job-deploy-linux.yml
+++ b/.github/workflows/job-deploy-linux.yml
@@ -278,6 +278,7 @@ jobs:
           azd env set BACKEND_RUNTIME_STACK="$BACKEND_RUNTIME_STACK"
           azd env set AZURE_ENV_USE_CASE="$AZURE_ENV_USE_CASE"
           azd env set DEPLOYING_USER_PRINCIPAL_TYPE="ServicePrincipal"
+          azd env set IS_WORKSHOP false
           
           # Set ACR name only when building Docker image
           if [[ "$BUILD_DOCKER_IMAGE" == "true" ]]; then
