--- a/workshop/mkdocs.yml
+++ b/workshop/mkdocs.yml
@@ -57,7 +57,8 @@ extra:
       link: https://github.com/microsoft/agentic-applications-for-unified-data-foundation-solution-accelerator
 
 nav:
-  - "🚀 Quick Deploy": deployment-guide.md
+  - "🚀 Quick Deploy for Azure": deployment-guide-optionA.md
+  - "🚀 Quick Deploy for Azure + Fabric": deployment-guide-optionB.md
   - Overview: index.md
   - Get Started:
     - Prerequisites: 00-get-started/index.md
